--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,77 @@
+* {
+  margin: 0;
+}
+
 .App {
-  text-align: center;
+  height: 100vh;
+  width: 100vw;
+  display: grid;
+  grid-template-rows: 1fr 5fr;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.search-bar {
   display: flex;
-  flex-direction: column;
+  height: 30%;
+  grid-column: 2;
+  width: 100%;
+}
+
+.search-bar button {
+  border: none;
+  background-color: #007dc6;
+  width: 50px;
+  cursor: pointer;
+}
+
+.shopping-cart-logo {
+  height: 100%;
+  display: flex;
+  padding-top: 10vh;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.shopping-cart-logo svg {
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.divider {
+  background-color: #007dc6;
+  position: absolute;
+  bottom: -25%;
+  height: 5vh;
+  width: 100%;
+  margin-top: -0.5%;
+}
+
+.main-container {
+  background-color: red;
+  padding-top: 10%;
+
+}
+
+header {
+  background-color: white;
+  grid-row: 1;
+  display: grid;
+  grid-template-columns: 1fr 4fr 2fr;
+  align-items: center;
+  padding-left: 2vw;
+  position: relative;
+}
+
+header input {
+  border: 1.5px solid #007dc6;
+  padding-left: 2%;
+  width: 100%;
+}
+
+header input[type=text]:focus {
+  border: 2px solid #007dc6;
+  outline: none;
+}
+
+header img {
+  height: 70%;
+  width: 90%;
 }
