--- a/src/App.css
+++ b/src/App.css
@@ -45,9 +45,88 @@
 }
 
 .main-container {
-  background-color: red;
-  padding-top: 10%;
+  background-color: white;
+  padding-left: 2%;
+  padding-top: 5vh;
+  display: grid;
+  grid-template-columns: 1fr 5fr;
+  grid-template-rows: 1fr 8fr;
+}
 
+.product-grid {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-row: 2;
+  grid-column: 2;
+}
+
+.product-container {
+  height: 500px;
+  width: 225px;
+  background-color: gainsboro;
+  cursor: pointer;
+}
+
+.product-container:hover :nth-child(2){
+  font-weight: 900;
+}
+
+.product-container:hover :nth-child(4){
+  text-decoration: underline;
+}
+
+.filter-form {
+  margin-top: 7.5%;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 2.5%;
+}
+
+.add-to-cart-button {
+  background-color: #007dc6;
+  border-color: #007dc6;
+  color: white;
+  padding-left: 16px;
+  padding-right: 16px;
+  min-height: 40px;
+  border-radius: 21px;
+  font-size: 0.9rem;
+  border-style: solid;
+  cursor: pointer;
+}
+
+.add-to-cart-button:hover {
+  background-color: #041e42;
+  border-color: #041e42;
+}
+
+.filter-menu {
+  min-width: 225px;
+  width: 17%;
+  grid-row: 2;
+  grid-column: 1;
+  border-right: 1px solid gray;
+}
+
+.filter-menu ul {
+  display: flex;
+  flex-direction: column;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 0;
+}
+
+.filter-menu li {
+  border-bottom: 1px solid gray;
+  list-style: none;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-top: 5%;
+  padding-bottom: 5%;
 }
 
 header {
@@ -74,4 +153,8 @@ header input[type=text]:focus {
 header img {
   height: 70%;
   width: 90%;
+}
+
+.category-circle {
+  background-color: gray;
 }
