--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@
   height: 100%;
   display: flex;
   padding-top: 10vh;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
 }
 
@@ -50,21 +50,24 @@
   padding-top: 5vh;
   display: grid;
   grid-template-columns: 1fr 5fr;
-  grid-template-rows: 1fr 8fr;
+  grid-template-rows: 125px 8fr;
 }
 
 .product-grid {
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
+  display: flex;
+  flex-wrap: wrap;
   grid-row: 2;
   grid-column: 2;
 }
 
 .product-container {
   height: 500px;
-  width: 225px;
-  background-color: gainsboro;
+  width: 250px;
+  background-color: white;
   cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .product-container:hover :nth-child(2){
@@ -73,6 +76,19 @@
 
 .product-container:hover :nth-child(4){
   text-decoration: underline;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  height: 48px;
+  border: none;
+  border-bottom: 1px solid black;
 }
 
 .filter-form {
@@ -106,6 +122,8 @@
   grid-row: 2;
   grid-column: 1;
   border-right: 1px solid gray;
+  position: relative;
+  top: 0%;
 }
 
 .filter-menu ul {
