populating product list

--- a/src/App.css
+++ b/src/App.css
@@ -26,8 +26,7 @@
 .shopping-cart-logo {
   height: 100%;
   display: flex;
-  padding-top: 10vh;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
 }
 
@@ -58,6 +57,7 @@
   flex-wrap: wrap;
   grid-row: 2;
   grid-column: 2;
+  height: 100vh;
 }
 
 .product-container {
@@ -68,6 +68,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  border: 1px solid gray;
 }
 
 .product-container:hover :nth-child(2){
@@ -161,6 +162,7 @@ header {
   align-items: center;
   padding-left: 2vw;
   position: relative;
+  height: 15vh;
 }
 
 header input {
@@ -177,8 +179,4 @@ header input[type=text]:focus {
 header img {
   height: 70%;
   width: 90%;
-}
-
-.category-circle {
-  background-color: gray;
 }
