--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,16 @@
   height: 100vh;
 }
 
+.product-details {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  z-index: 15;
+  background-color: white;
+}
+
 .product-container {
   height: 500px;
   width: 250px;
