--- a/src/App.css
+++ b/src/App.css
@@ -65,9 +65,34 @@
 }
 
 .checkout-buttons {
-  position: absolute;
-  bottom: -10%;
-  left: 25%;
+  position: relative;
+  bottom: -5%;
+}
+
+.link-home, .link-home a {
+  background-color: #007dc6;
+  border-color: #007dc6;
+  color: white;
+  padding: 5px 16px;
+  min-height: 40px;
+  border-radius: 21px;
+  font-size: 0.9rem;
+  border-style: solid;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.link-home:hover {
+  background-color: #041e42;
+  border-color: #041e42;
+}
+
+.empty-cart {
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 2%;
 }
 
 .cart-notification {
@@ -86,6 +111,7 @@
 
 .checkout-item {
   border: 1px solid gray;
+  min-height: 15%;
   margin-bottom: 1vh;
   display: grid;
   align-items: center;
@@ -99,8 +125,9 @@
   min-height: 100vh;
   width: 100vw;
   display: grid;
-  grid-template-columns: 4fr 1fr;
+  grid-template-columns: 3fr 1fr;
   background-color: white;
+  overflow-x: hidden;
 }
 
 .price-info {
@@ -109,20 +136,21 @@
   top: 0;
   border: 1px solid gray;
   background-color: white;
-  height: 30vh;
+  min-height: 30vh;
   display: flex;
   flex-direction: column;
 }
 
 .product-container {
-  height: 500px;
-  width: 250px;
+  height: 450px;
+  width: 300px;
   background-color: white;
   cursor: pointer;
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 1px solid gray;
+  justify-content: center;
+  text-align: center;
 }
 
 .product-container:hover :nth-child(2){
